@@ -1,3 +1,8 @@
+2010-05-11  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
+
+	* Fix: fsvn-browse-commit-path
+	    subcommand args missing.
+
 2010-05-10  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>
 
 	* Fix: fsvn-log-sibling-save-this
